FA-233: Disabled ipfs option SharingOptionsPage if files size exceed max size
